syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

message TestStructs {
  repeated TestStruct ss = 1;
}

message TestStruct {
  string                    str         = 1;
  bool                      bool        = 2;
  int64                     int         = 3;
  int32                     int16       = 4;
  int64                     int64       = 5;
  uint64                    uint        = 6;
  uint32                    uint8       = 7;
  uint32                    uint32      = 8;
  google.protobuf.Timestamp time        = 9;
  TestSubStruct             sub_pointer = 10;
  repeated TestSubStruct    subs        = 11;
}

message TestSubStruct {
  string                    str    = 1;
  bool                      bool   = 2;
  int64                     int    = 3;
  int32                     int16  = 4;
  int64                     int64  = 5;
  uint64                    uint   = 6;
  uint32                    uint8  = 7;
  uint32                    uint32 = 8;
  google.protobuf.Timestamp time   = 9;
}
